fixed: header overflowing when browser window is very short

--- a/viewport-header-transparent-content-bs.scss
+++ b/viewport-header-transparent-content-bs.scss
@@ -291,6 +291,11 @@ main .row.transparent {
 	font-size: 0;
 	overflow: hidden;
 	transform: scale3d(1, 1, 1); // Fix Safari's 1px gap between element and border
+//     border: 1rem solid #fff;
+    display: table;
+    table-layout: fixed;
+// 	width: 100%;
+	border-collapse: separate;
 
 }
 
@@ -298,6 +303,10 @@ main .row.transparent > * {
 	
 	margin: 0;
 	padding: 0;
+	display: table-cell;
+    float: none;
+    width: 33.3%;
+    position: relative;
 
 }
 
@@ -317,6 +326,13 @@ main .row.transparent > *:after {
 	main .row.transparent > *:after {
 
 		display: none;
+	
+	}
+	
+	main .row.transparent, main .row.transparent > * {
+		
+		display: block;
+		width: 100%;
 	
 	}
 
